--- a/index.html
+++ b/index.html
@@ -3,12 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rain Animation</title>
+    <title>Webshop</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body class="bg-gray-800 flex items-center justify-center min-h-screen">
-    <div id="rain-container" class="relative w-full h-full overflow-hidden"></div>
+<body class="bg-gray-100">
+    <header class="bg-white shadow">
+        <div class="container mx-auto p-4 flex justify-between">
+            <h1 class="text-2xl font-bold">Webshop</h1>
+            <nav>
+                <a href="cart.html" class="text-gray-700">Cart</a>
+            </nav>
+        </div>
+    </header>
+    <main class="container mx-auto p-4">
+        <h2 class="text-xl font-semibold mb-4">Products</h2>
+        <div id="product-list" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"></div>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
