--- a/product.html
+++ b/product.html
@@ -1,23 +1,24 @@
-[
-  {
-    "id": 1,
-    "name": "Product 1",
-    "description": "Description for product 1",
-    "price": 29.99,
-    "image": "https://via.placeholder.com/150"
-  },
-  {
-    "id": 2,
-    "name": "Product 2",
-    "description": "Description for product 2",
-    "price": 39.99,
-    "image": "https://via.placeholder.com/150"
-  },
-  {
-    "id": 3,
-    "name": "Product 3",
-    "description": "Description for product 3",
-    "price": 49.99,
-    "image": "https://via.placeholder.com/150"
-  }
-]
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Product Details</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body class="bg-gray-100">
+    <header class="bg-white shadow">
+        <div class="container mx-auto p-4 flex justify-between">
+            <h1 class="text-2xl font-bold">Webshop</h1>
+            <nav>
+                <a href="cart.html" class="text-gray-700">Cart</a>
+            </nav>
+        </div>
+    </header>
+    <main class="container mx-auto p-4">
+        <div id="product-details"></div>
+    </main>
+    <script src="script.js"></script>
+</body>
+</html>
