--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="bg-gray-100">
+    <div class="background"></div> <!-- Added background div -->
     <header class="bg-white shadow">
         <div class="container mx-auto p-4 flex justify-between">
             <h1 class="text-2xl font-bold">Webshop</h1>
@@ -22,4 +23,5 @@
     </main>
     <script src="script.js"></script>
 </body>
+
 </html>
