--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
+    <section class="hero">
+    <div class="hero-content">
+        <h1 class="hero-title">Unleash Your Style</h1>
+        <p class="hero-subtitle">Discover our exclusive collection of premium products designed for the modern lifestyle.</p>
+        <a href="#product-list" class="hero-button">Shop Now</a>
+    </div>
+</section>
 <body class="bg-gray-100">
     <div class="background"></div> <!-- Added background div -->
     <header class="bg-white shadow">
