--- a/index.html
+++ b/index.html
@@ -9,6 +9,31 @@
 </head>
 <body class="bg-gray-100">
     <div class="background"></div> <!-- Added background div -->
+        <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="sale.html">Sale</a></li>
+            </ul>
+        </nav>
+    </header>
+
+        <div class="background"></div>
+    
+    <main>
+        <section class="hero">
+            <div class="hero-content">
+                <h1 class="hero-title">Welcome to Our Webshop!</h1>
+                <p class="hero-subtitle">Explore our amazing products and special offers.</p>
+                <a href="products.html" class="hero-button">Shop Now</a>
+            </div>
+        </section>
+
+        <div id="product-list" class="product-list">
+            <!-- Product cards will be dynamically inserted here -->
+        </div>
+    </main>
     <header class="bg-white shadow">
         <div class="container mx-auto p-4 flex justify-between">
             <h1 class="text-2xl font-bold">Webshop</h1>
