--- a/index.html
+++ b/index.html
@@ -7,21 +7,24 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body class="bg-gray-100">
-    <div class="background"></div> <!-- Added background div -->
-        <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="sale.html">Sale</a></li>
-            </ul>
-        </nav>
+<body class="bg-gray-900 text-white">
+    <header class="bg-gray-800">
+        <div class="container mx-auto p-4 flex justify-between">
+            <h1 class="text-2xl font-bold">Webshop</h1>
+            <nav>
+                <ul class="flex space-x-4">
+                    <li><a href="index.html" class="hover:text-orange-400">Home</a></li>
+                    <li><a href="about.html" class="hover:text-orange-400">About Us</a></li>
+                    <li><a href="sale.html" class="hover:text-orange-400">Sale</a></li>
+                    <li><a href="cart.html" class="hover:text-orange-400">Cart</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
-        <div class="background"></div>
-    
-    <main>
+    <div class="background"></div> <!-- Added background div -->
+
+    <main class="container mx-auto p-4">
         <section class="hero">
             <div class="hero-content">
                 <h1 class="hero-title">Welcome to Our Webshop!</h1>
@@ -30,29 +33,12 @@
             </div>
         </section>
 
-        <div id="product-list" class="product-list">
+        <h2 class="text-xl font-semibold mb-4">Products</h2>
+        <div id="product-list" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
             <!-- Product cards will be dynamically inserted here -->
         </div>
     </main>
-    <header class="bg-white shadow">
-        <div class="container mx-auto p-4 flex justify-between">
-            <h1 class="text-2xl font-bold">Webshop</h1>
-            <nav>
-                <a href="cart.html" class="text-gray-700">Cart</a>
-            </nav>
-        </div>
-    </header>
-    <main class="container mx-auto p-4">
-            <section class="hero">
-    <div class="hero-content">
-        <h1 class="hero-title">Unleash Your Style</h1>
-        <p class="hero-subtitle">Discover our exclusive collection of premium products designed for the modern lifestyle.</p>
-        <a href="#product-list" class="hero-button">Shop Now</a>
-    </div>
-</section>
-        <h2 class="text-xl font-semibold mb-4">Products</h2>
-        <div id="product-list" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"></div>
-    </main>
+
     <script src="script.js"></script>
 </body>
 </html>
