--- a/sale.html
+++ b/sale.html
@@ -4,25 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sale - Webshop</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="sale.html">Sale</a></li>
-            </ul>
-        </nav>
+<body class="bg-gray-900 text-white">
+    <header class="bg-gray-800">
+        <div class="container mx-auto p-4 flex justify-between">
+            <h1 class="text-2xl font-bold">Webshop</h1>
+            <nav>
+                <ul class="flex space-x-4">
+                    <li><a href="index.html" class="hover:text-orange-400">Home</a></li>
+                    <li><a href="about.html" class="hover:text-orange-400">About Us</a></li>
+                    <li><a href="sale.html" class="hover:text-orange-400">Sale</a></li>
+                    <li><a href="cart.html" class="hover:text-orange-400">Cart</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
-    <main>
-        <h1>Sale</h1>
-        <p>Check out our discounted products!</p>
-        <div id="sale-product-list" class="product-list">
-            <!-- Sale product cards will be dynamically inserted here -->
-        </div>
+    <main class="container mx-auto p-4">
+        <h2 class="text-2xl font-semibold mb-4">On Sale</h2>
+        <div id="sale-product-list" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"></div>
     </main>
 
     <script src="script.js"></script>
