--- a/index.html
+++ b/index.html
@@ -3,42 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webshop</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <title>Endless Runner Game</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-gray-900 text-white">
-    <header class="bg-gray-800">
-        <div class="container mx-auto p-4 flex justify-between">
-            <h1 class="text-2xl font-bold">Webshop</h1>
-            <nav>
-                <ul class="flex space-x-4">
-                    <li><a href="index.html" class="hover:text-orange-400">Home</a></li>
-                    <li><a href="about.html" class="hover:text-orange-400">About Us</a></li>
-                    <li><a href="sale.html" class="hover:text-orange-400">Sale</a></li>
-                    <li><a href="cart.html" class="hover:text-orange-400">Cart</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-
-    <div class="background"></div> <!-- Added background div -->
-
-    <main class="container mx-auto p-4">
-        <section class="hero">
-            <div class="hero-content">
-                <h1 class="hero-title">Welcome to Our Webshop!</h1>
-                <p class="hero-subtitle">Explore our amazing products and special offers.</p>
-                <a href="products.html" class="hero-button">Shop Now</a>
-            </div>
-        </section>
-
-        <h2 class="text-xl font-semibold mb-4">Products</h2>
-        <div id="product-list" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-            <!-- Product cards will be dynamically inserted here -->
-        </div>
-    </main>
-
+<body>
+    <div id="gameContainer">
+        <div id="player"></div>
+        <div id="obstacle"></div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
