--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
             <source src="https://raw.githubusercontent.com/YHDevAI/oiia%20oiia%20spinning%20cat%20[epilepsy%20warning].mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
+        
         <div id="backgroundElements"></div>
         <div id="player"></div>
         <div id="obstacle"></div>
+        
+        <!-- Start Button -->
+        <button id="startButton">Start Playing</button>
+        <!-- Restart Button -->
+        <button id="restartButton" style="display: none;">Restart</button>
     </div>
     <script src="script.js"></script>
 </body>
