--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
 </head>
 <body>
     <div id="gameContainer">
-        <video id="backgroundVideo" loop>
-            <source src="https://raw.githubusercontent.com/YHDevAI/oiia%20oiia%20spinning%20cat%20[epilepsy%20warning].mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
+        <iframe id="backgroundVideo" src="https://www.youtube.com/embed/YOUR_VIDEO_ID?autoplay=1&loop=1&playlist=YOUR_VIDEO_ID&controls=0&mute=0" frameborder="0" allowfullscreen></iframe>
         
         <div id="backgroundElements"></div>
         <div id="player"></div>
