--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="gameContainer">
-        <iframe id="backgroundVideo" src="https://www.youtube.com/embed/LYCYoSiqgqA?autoplay=1&loop=1&playlist=LYCYoSiqgqA&controls=0&mute=0" frameborder="0" allowfullscreen></iframe>
+        <iframe id="backgroundVideo" src="https://www.youtube.com/embed/LYCYoSiqgqA?autoplay=1&loop=1&playlist=LYCYoSiqgqA&controls=0" frameborder="0" allowfullscreen></iframe>
         
         <div id="backgroundElements"></div>
         <div id="player"></div>
