--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>oo ee a e a RUN</title>
+    <title>RUN-AI</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="gameContainer">
-        <iframe id="backgroundVideo" src="https://www.youtube.com/embed/LYCYoSiqgqA?autoplay=1&loop=1&playlist=LYCYoSiqgqA&controls=0" frameborder="0" allowfullscreen></iframe>
+        <iframe id="backgroundVideo" src="https://www.youtube.com/embed/LYCYoSiqgqA?autoplay=1&loop=1&playlist=LYCYoSiqgqA&controls=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
         
         <div id="backgroundElements"></div>
         <div id="player"></div>
