--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
         <div id="backgroundElements"></div>
         <div id="player"></div>
         <div id="obstacle"></div>
-        
-        <!-- Start Button -->
-        <button id="startButton">Start Playing</button>
+
+        <!-- Overlay for Start -->
+        <div id="startOverlay">
+            <button id="startButton">Start Playing</button>
+        </div>
+
         <!-- Restart Button -->
         <button id="restartButton" style="display: none;">Restart</button>
     </div>
