--- a/index.html
+++ b/index.html
@@ -3,25 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RUN-AI</title>
-    <link rel="stylesheet" href="style.css">
+    <title>AI Search Engine</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body>
-    <div id="gameContainer">
-        <iframe id="backgroundVideo" src="https://www.youtube.com/embed/LYCYoSiqgqA?autoplay=1&loop=1&playlist=LYCYoSiqgqA&controls=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
-        
-        <div id="backgroundElements"></div>
-        <div id="player"></div>
-        <div id="obstacle"></div>
-
-        <!-- Overlay for Start -->
-        <div id="startOverlay">
-            <button id="startButton">Start Playing</button>
+<body class="bg-gray-100">
+    <div class="container mx-auto p-4">
+        <h1 class="text-4xl font-bold text-center mb-8">AI Search Engine</h1>
+        <div class="max-w-xl mx-auto">
+            <input id="search-input" type="text" class="w-full p-4 border border-gray-300 rounded" placeholder="Enter your query">
+            <button id="search-button" class="w-full mt-4 p-4 bg-blue-500 text-white rounded">Search</button>
         </div>
-
-        <!-- Restart Button -->
-        <button id="restartButton" style="display: none;">Restart</button>
+        <div id="results" class="mt-8"></div>
     </div>
-    <script src="script.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
