--- a/index.html
+++ b/index.html
@@ -3,18 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Search Engine</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <title>3D Website</title>
 </head>
-<body class="bg-gray-100">
-    <div class="container mx-auto p-4">
-        <h1 class="text-4xl font-bold text-center mb-8">AI Search Engine</h1>
-        <div class="max-w-xl mx-auto">
-            <input id="search-input" type="text" class="w-full p-4 border border-gray-300 rounded" placeholder="Enter your query">
-            <button id="search-button" class="w-full mt-4 p-4 bg-blue-500 text-white rounded">Search</button>
-        </div>
-        <div id="results" class="mt-8"></div>
-    </div>
-    <script src="app.js"></script>
+<body>
+    <div id="app"></div>
+    <script type="module" src="/main.js"></script>
 </body>
 </html>
