--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             z-index: 100; /** make sure this is the highest value compared to all other divs **/
             top: 0;
             left: 0;
-            background: #191f26;
+            background: #FFFFFF;
             display: flex;
             justify-content: center;
             align-items: center;
